log/build_2026-06-25_21-31-44/warehouse_manipulation/stdout_stderr.log
-- Found ament_cmake: 2.5.6 (/opt/ros/jazzy/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 28.1.21 (/opt/ros/jazzy/share/rclcpp/cmake)
-- Found rosidl_generator_c: 4.6.9 (/opt/ros/jazzy/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.6.9 (/opt/ros/jazzy/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.3 (/opt/ros/jazzy/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.4.4 (/opt/ros/jazzy/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found rclcpp_action: 28.1.21 (/opt/ros/jazzy/share/rclcpp_action/cmake)
-- Found control_msgs: 5.9.0 (/opt/ros/jazzy/share/control_msgs/cmake)
-- Found moveit_ros_planning_interface: 2.12.4 (/opt/ros/jazzy/share/moveit_ros_planning_interface/cmake)
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.83.0/BoostConfig.cmake (found version "1.83.0") found components: date_time filesystem program_options system thread 
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.83.0/BoostConfig.cmake (found version "1.83.0") found components: chrono date_time filesystem iostreams program_options regex serialization system thread 
-- Found parameter_traits: 0.7.3 (/opt/ros/jazzy/share/parameter_traits/cmake)
CMake Deprecation Warning at /opt/ros/jazzy/share/tl_expected/cmake/tl_expectedConfig.cmake:37 (message):
  Package 'tl_expected' is deprecated (This package will be removed in ROS 2
  Lyrical Luth.

        Use tl/expected.hpp from libexpected-dev,
        or rcpputils/tl_expected/expected.hpp if the system header is not available)
Call Stack (most recent call first):
  /opt/ros/jazzy/share/parameter_traits/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/parameter_traits/cmake/parameter_traitsConfig.cmake:41 (include)
  /opt/ros/jazzy/share/generate_parameter_library/cmake/generate_parameter_library-extras.cmake:30 (find_package)
  /opt/ros/jazzy/share/generate_parameter_library/cmake/generate_parameter_libraryConfig.cmake:41 (include)
  /opt/ros/jazzy/share/moveit_core/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/moveit_core/cmake/moveit_coreConfig.cmake:41 (include)
  /opt/ros/jazzy/share/moveit_ros_planning_interface/cmake/ament_cmake_export_dependencies-extras.cmake:21 (find_package)
  /opt/ros/jazzy/share/moveit_ros_planning_interface/cmake/moveit_ros_planning_interfaceConfig.cmake:41 (include)
  CMakeLists.txt:9 (find_package)


-- Found rclcpp_lifecycle: 28.1.21 (/opt/ros/jazzy/share/rclcpp_lifecycle/cmake)
-- Ensuring Eigen3 include directory is part of orocos-kdl CMake target
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.83.0/BoostConfig.cmake (found version "1.83.0") found components: system filesystem date_time program_options thread chrono 
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.83.0/BoostConfig.cmake (found version "1.83.0") found components: thread system filesystem regex date_time program_options 
-- Found Boost: /usr/lib/x86_64-linux-gnu/cmake/Boost-1.83.0/BoostConfig.cmake (found version "1.83.0") found components: system filesystem date_time program_options thread 
-- Found warehouse_interfaces: 0.1.0 (/home/agonb/Desktop/Robotica1-26/robotics/final_ws/install/warehouse_interfaces/share/warehouse_interfaces/cmake)
-- Configuring done (1.0s)
-- Generating done (0.0s)
-- Build files have been written to: /home/agonb/Desktop/Robotica1-26/robotics/final_ws/build/warehouse_manipulation
[ 25%] Building CXX object CMakeFiles/place_product_server.dir/src/place_product_server.cpp.o
[ 75%] Built target demo_pick_place
In file included from /home/agonb/Desktop/Robotica1-26/robotics/final_ws/src/warehouse_manipulation/src/place_product_server.cpp:11:
/opt/ros/jazzy/include/moveit_ros_planning_interface/moveit/move_group_interface/move_group_interface.h:51:77: note: ‘#pragma message: .h header is obsolete. Please use the .hpp header instead.’
   51 | #pragma message(".h header is obsolete. Please use the .hpp header instead.")
      |                                                                             ^
/home/agonb/Desktop/Robotica1-26/robotics/final_ws/src/warehouse_manipulation/src/place_product_server.cpp: In constructor ‘PlaceProductServer::PlaceProductServer(const rclcpp::Node::SharedPtr&)’:
/home/agonb/Desktop/Robotica1-26/robotics/final_ws/src/warehouse_manipulation/src/place_product_server.cpp:66:13: error: ‘ServiceOptions’ is not a member of ‘rclcpp’; did you mean ‘exceptions’?
   66 |     rclcpp::ServiceOptions service_options;
      |             ^~~~~~~~~~~~~~
      |             exceptions
/home/agonb/Desktop/Robotica1-26/robotics/final_ws/src/warehouse_manipulation/src/place_product_server.cpp:67:5: error: ‘service_options’ was not declared in this scope
   67 |     service_options.callback_group = callback_group_;
      |     ^~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/place_product_server.dir/build.make:76: CMakeFiles/place_product_server.dir/src/place_product_server.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:165: CMakeFiles/place_product_server.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
